--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,10 @@
   <title>AnalyticLab</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="body-cl">
+  <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
   <app-root></app-root>
 </body>
 </html>
