[UPDATE] map test

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,10 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <link href='https://api.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.css' rel='stylesheet' />
+
 </head>
 <body class="body-cl">
-  <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
   <app-root></app-root>
 </body>
 </html>
